--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2384,7 +2384,7 @@ input {
     border-bottom-color: #0088ce !important; }
 
 body {
-  font-family: "Overpass", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px; }
 
 @media (min-width: 910px) {
