--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,6 +1,6 @@
 %base-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 100px 1fr 100px;
 }
 .nav-grid {
   @extend %base-grid;
@@ -48,6 +48,7 @@
   }
   &-secondary {
     @extend %base-grid;
+    grid-template-columns: 1fr 100% 1fr;
     background-color: #030303;
     margin-top: 47px;
     margin-right: -8px;
@@ -103,16 +104,28 @@
   }
   &-recent-spaces {
     display: grid;
-    grid-template-columns: 25px 1fr;
+    grid-template-columns: 20px 1fr;
     &:first-child {
       color: #d1d1d1;
+    }
+    &-user {
+      border-radius: 50%;
+      width: 15px;
+      vertical-align: middle;
+    }
+    &-username {
+      font-size: .8rem;
+      color: #72767b;
+    }
+    &-name {
+      margin-left: -15px;
     }
   }
 }
 .center-menu-content{
   @extend %dropdown-menu;
   width: 250px;
-  margin-left: -35px;
+  margin-left: -17px;
   ul {
     margin: 5px 0 0 0;
     padding: 10px 20px;
