--- a/sass/site.scss
+++ b/sass/site.scss
@@ -47,43 +47,43 @@ body {
   background: url('../images/HomeDashboard.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 80px;
+  background-position-y: 38px;
 }
 .background-cover-space {
   background: url('../images/SpaceDashboard.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 80px;
+  background-position-y: 38px;
 }
 .background-cover-user-settings {
   background: url('../images/UserSettings.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 80px;
+  background-position-y: 40px;
 }
 .background-cover-space-settings {
-  background: url('../images/Areas.png');
+  background: url('../images/SpaceSettings.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 53px;
+  background-position-y: 38px;
 }
 .background-cover-plan {
   background: url('../images/Planner.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 53px;
+  background-position-y: 38px;
 }
 .background-cover-create {
   background: url('../images/Create.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 53px;
+  background-position-y: 38px;
 }
 .background-cover-all-spaces {
   background: url('../images/ViewAllSpaces.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 80px;
+  background-position-y: 40px;
 }
 @media (max-width: 900px) {
   .background-cover {
