--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,6 +2,12 @@
   display: grid;
   grid-template-columns: 100px 1fr 100px;
 }
+.notification-drawer {
+  position: fixed;
+  top: 88px;
+  right: 0;
+  display: none;
+}
 .nav-grid {
   @extend %base-grid;
   font-size: 2em;
@@ -43,6 +49,9 @@
       margin-right: 10px;
     }
     .fa-search {
+      margin-left: 10px;
+    }
+    .fa-bell {
       margin-left: 10px;
     }
   }
@@ -165,7 +174,8 @@
 .space-dropdown {
   position: absolute;
   top: 10px;
-  right: 50px;
+  // right: 50px;
+  right: 100px;
   // transition: linear 3s;
   transition: linear 1s;
   &:hover {
@@ -181,7 +191,7 @@
   opacity: .5;
   &-show {
     top: 12px;
-    right: 50px;
+    right: 100px;
     width: 225px;
     opacity: 1;
   }
@@ -194,7 +204,7 @@
 .search-expanded-space {
   position: absolute;
   top: 10px;
-  right: 300px;
+  right: 350px;
   // left: 200px;
 }
 .search-expanded-centered {
