--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -114,6 +114,15 @@
   &-recent-spaces {
     display: grid;
     grid-template-columns: 20px 1fr;
+    a {
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      max-width: 200px;
+      margin-left: -17px;
+      padding-left: 17px;
+      display: block;
+    }
     &:first-child {
       color: #d1d1d1;
     }
@@ -154,7 +163,7 @@
   @extend %dropdown-menu;
   position: fixed;
   right: 60px;
-  width: 235px;
+  width: 245px;
   ul {
     margin: 5px 0 0 0;
     padding: 10px 20px;
